# Tools

./: CMakeLists.txt  Doxyfile  TestTools.cpp  TestValidType.cpp  Tools.cpp  Tools.h  ValidType.cpp  ValidType.h
Geometry/: Angles.cpp  Angles.h  CMakeLists.txt  Circle.cpp  Circle.h  Color.cpp  Color.h  Doxyfile  Edge.cpp  Edge.h  Geometry.cpp  Geometry.h  Helpers.cpp  Helpers.h  LineSegment.cpp  LineSegment.h  OrientedPoint.cpp  OrientedPoint.h  Ray.cpp  Ray.h  Test.cpp  Transformation.cpp  Transformation.h  Triangle.cpp  Triangle.h
Geometry/Tests/: CMakeLists.txt  TestAligningRotation.cpp  TestAxisAngle.cpp  TestBestPlane.cpp  TestCorrespondenceError.cpp  TestFitPlane.cpp  TestIntersectRayBox.cpp  TestIsRightHanded.cpp  TestLineSegmentRotation.cpp  TestRayIsSameDirection.cpp  TestRotation.cpp  TestSphereRect.cpp  TestTransformation.cpp
KDTree/: CMakeLists.txt  Doxyfile  KDTree.cpp  KDTree.h  TestKDTree.cpp
ModelFile/: AddNormals.cpp  AddScannerPosition.cpp  CMakeLists.txt  CMakeLists.txt.old  CenterModel.cpp  CenterOfMass.cpp  CleanupModel.cpp  Combine.cpp  CombineManual.cpp  Converter.cpp  Doxyfile  ExtractPoints.cpp  Legacy.cpp  Makefile.bak  ModelFile.cpp  ModelFile.cpp.bak  ModelFile.cpp.bak2  ModelFile.h  NumPointsInBox.cpp  RemoveTriangles.cpp  RemoveVertices.cpp  TransferTriangles.cpp  TransformAllCarPositions.cpp  TransformModel.cpp  Triangulate.cpp  Triangulate.h  TriangulateScan.cpp  VisualizableModel.cpp  VisualizableModel.h
ModelFile/Tests/: CMakeLists.txt  Test.cpp
VTKHelpers/: CMakeLists.txt  CreateVtpLine.cpp  CreateVtpLineParts.cpp  Doxyfile  Octree.cpp  Octree.h  ScaleLinePlot.cpp  VTKHelpers.cpp  VTKHelpers.h
VTKHelpers/Tests/: CMakeLists.txt  TestAddArray.cpp  TestBestFitPlane.cpp  TestOctree.cpp
VXLHelpers/: CMakeLists.txt  Doxyfile  TestVXLHelpers.cpp  VXLHelpers.cpp  VXLHelpers.h
VXLHelpers/Tests/: CMakeLists.txt  TestEigen3x3.cpp  TestEigenBig.cpp  TestMatrixPowers.cpp  TestReshape.cpp  TestVectorize.cpp
